apm-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm-proxy
  labels:
    app: apm-proxy
spec:
  selector:
    app: apm-proxy
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm-proxy
  labels:
    app: apm-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apm-proxy
  template:
    metadata:
      labels:
        app: apm-proxy
    spec:
      containers:
      - name: apm-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy
