s3proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3proxy-deployment
  labels:
    app: s3proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: s3proxy
  template:
    metadata:
      labels:
        app: s3proxy
    spec:
      containers:
      - name: s3proxy
        image: andrewgaul/s3proxy
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: s3proxy-service
spec:
  selector:
    app: s3proxy
  ports:
    - protocol: TCP
      port: 80
