longhorn-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-proxy
  labels:
    app: longhorn
spec:
  ports:
  - name: http
    port: 4180
    targetPort: 4180
  selector:
    app: longhorn
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-proxy
  template:
    metadata:
      labels:
        app: longhorn-proxy
    spec:
      containers:
      - name: longhorn-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy
      ports:
        - name: http
          containerPort: 4180
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - login.ops.conalep.mx
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: login-cert # This should match the Certificate secretName
    hosts:
    - login.ops.conalep.mx # This should match a DNS name in the Certificate
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: login-vservice
spec:
  gateways:
  - keycloak-gateway
  hosts:
  - login.ops.conalep.mx
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: keycloak
